# google-slint

./: Cargo.toml
src/: main.rs  translate.rs
ui/: appwindow.slint
