[package]
name = "googletranslate"
version = "0.1.0"
authors = ["ShootingStarDragons <ShootingStarDragons@protonmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
thiserror = "1.0.50"

[build-dependencies]
slint-build = "1.3"
